<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home"
            />
        <item android:title="Transaction">
            <menu>
                <group android:checkableBehavior="none">
                <item
                    android:id="@+id/steel_sale_confirmation"
                    android:icon="@drawable/ic_sales_entry_24dp"
                    android:title="Dealer Point Sale Confirmation" />
                </group>
            </menu>
        </item>
        <item android:title="Report">
            <menu>
                <group android:checkableBehavior="none">
                    <item
                        android:id="@+id/dailySalesListing"
                        android:icon="@drawable/ic_steel_sale_edit_24dp"
                        android:title="Dealer Point Sale Listing" />
                    <item
                        android:id="@+id/monthlySalesReport"
                        android:icon="@drawable/ic_steel_sale_edit_24dp"
                        android:title="Projected Dealer Point Report" />
                </group>
            </menu>
        </item>
        <item android:title="Settings">
            <menu>
                <group android:checkableBehavior="none">
                    <item
                        android:id="@+id/changePassword"
                        android:icon="@drawable/ic_lock_outline_24dp"
                        android:title="@string/ChangePass" />

                    <item
                        android:id="@+id/logout"
                        android:icon="@android:drawable/ic_lock_power_off"
                        android:title="@string/logout" />
                </group>
            </menu>
        </item>
    </group>

</menu>
