<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    >
    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/my_actionbar_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp">
        <RelativeLayout
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/screenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About App"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:textColor="#C5C5C5"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:layout_below="@+id/my_actionbar_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    app:srcCompat="@drawable/logo"
                    android:layout_width="250dp"
                    android:layout_height="250dp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium"
                    android:gravity="center"
                    >
                    <TextView
                        android:id="@+id/appversion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Version: 2.2"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:id="@+id/appyear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="©2021 BMA Steel."
                        android:textColor="@color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/CheckForUpdates"
                        android:onClick="onUpdateClick"
                        android:clickable="true"
                        android:textColor="@color/primary_dark"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/UpdateDescription"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ReportProblem"
                        android:clickable="true"
                        android:onClick="onCrashReportClick"
                        android:textColor="@color/primary_dark"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ProblemDescription"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/accent"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AboutUsDescription"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Contact in Case of Problem\nMob:- 8087293891\nEmail:- jawed.ahmed@captainsteel.com"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/privacy_policy_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PrivacyPolicy"
                        android:onClick="onPrivacyPolicyClick"
                        android:clickable="true"
                        android:textColor="@color/primary_dark"
                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>